--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 iced = "0.13.1"
 async-std = "1.13.2"
 iced_toasts = "0.1.1"
-serde = { features = ["derive"] }
+serde = { version="1.0", features = ["derive"] }
 serde_json = "1.0"
 directories-next = "2.0"
