--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -176,11 +176,11 @@ jobs:
       - name: Build release binary
         shell: bash
         run: |
-          ${{ env.CARGO }} build --verbose --profile release-lto --features pcre2 ${{ env.TARGET_FLAGS }}
+          ${{ env.CARGO }} build --verbose --profile release-lto ${{ env.TARGET_FLAGS }}
           if [[ "${{ matrix.os }}" == windows-* ]]; then
-            bin="target/${{ matrix.target }}/release-lto/rg.exe"
+            bin="target/${{ matrix.target }}/release-lto/PandaKnock.exe"
           else
-            bin="target/${{ matrix.target }}/release-lto/rg"
+            bin="target/${{ matrix.target }}/release-lto/PandaKnock"
           fi
           echo "BIN=$bin" >> $GITHUB_ENV
 
@@ -203,60 +203,7 @@ jobs:
         shell: bash
         run: |
           version="${{ needs.create-release.outputs.version }}"
-          echo "ARCHIVE=ripgrep-$version-${{ matrix.target }}" >> $GITHUB_ENV
-
-      - name: Creating directory for archive
-        shell: bash
-        run: |
-          mkdir -p "$ARCHIVE"/{complete,doc}
-          cp "$BIN" "$ARCHIVE"/
-          cp {README.md,COPYING,UNLICENSE,LICENSE-MIT} "$ARCHIVE"/
-          cp {CHANGELOG.md,FAQ.md,GUIDE.md} "$ARCHIVE"/doc/
-
-      - name: Generate man page and completions (no emulation)
-        if: matrix.qemu == ''
-        shell: bash
-        run: |
-          "$BIN" --version
-          "$BIN" --generate complete-bash > "$ARCHIVE/complete/rg.bash"
-          "$BIN" --generate complete-fish > "$ARCHIVE/complete/rg.fish"
-          "$BIN" --generate complete-powershell > "$ARCHIVE/complete/_rg.ps1"
-          "$BIN" --generate complete-zsh > "$ARCHIVE/complete/_rg"
-          "$BIN" --generate man > "$ARCHIVE/doc/rg.1"
-
-      - name: Generate man page and completions (emulation)
-        if: matrix.qemu != ''
-        shell: bash
-        run: |
-          docker run --rm -v \
-            "$PWD/target:/target:Z" \
-            "ghcr.io/cross-rs/${{ matrix.target }}:main" \
-            "${{ matrix.qemu }}" "/$BIN" --version
-          docker run --rm -v \
-            "$PWD/target:/target:Z" \
-            "ghcr.io/cross-rs/${{ matrix.target }}:main" \
-            "${{ matrix.qemu }}" "/$BIN" \
-              --generate complete-bash > "$ARCHIVE/complete/rg.bash"
-          docker run --rm -v \
-            "$PWD/target:/target:Z" \
-            "ghcr.io/cross-rs/${{ matrix.target }}:main" \
-            "${{ matrix.qemu }}" "/$BIN" \
-              --generate complete-fish > "$ARCHIVE/complete/rg.fish"
-          docker run --rm -v \
-            "$PWD/target:/target:Z" \
-            "ghcr.io/cross-rs/${{ matrix.target }}:main" \
-            "${{ matrix.qemu }}" "/$BIN" \
-              --generate complete-powershell > "$ARCHIVE/complete/_rg.ps1"
-          docker run --rm -v \
-            "$PWD/target:/target:Z" \
-            "ghcr.io/cross-rs/${{ matrix.target }}:main" \
-            "${{ matrix.qemu }}" "/$BIN" \
-              --generate complete-zsh > "$ARCHIVE/complete/_rg"
-          docker run --rm -v \
-            "$PWD/target:/target:Z" \
-            "ghcr.io/cross-rs/${{ matrix.target }}:main" \
-            "${{ matrix.qemu }}" "/$BIN" \
-              --generate man > "$ARCHIVE/doc/rg.1"
+          echo "ARCHIVE=PandaKnock-$version-${{ matrix.target }}" >> $GITHUB_ENV
 
       - name: Build archive (Windows)
         shell: bash
@@ -340,20 +287,13 @@ jobs:
         run: |
           "$BIN" --generate man > "$DEPLOY_DIR/rg.1"
 
-      - name: Generate shell completions
-        shell: bash
-        run: |
-          "$BIN" --generate complete-bash > "$DEPLOY_DIR/rg.bash"
-          "$BIN" --generate complete-fish > "$DEPLOY_DIR/rg.fish"
-          "$BIN" --generate complete-zsh > "$DEPLOY_DIR/_rg"
-
       - name: Build release binary
         shell: bash
         run: |
           cargo deb --profile deb --target ${{ env.TARGET }}
           version="${{ needs.create-release.outputs.version }}"
           echo "DEB_DIR=target/${{ env.TARGET }}/debian" >> $GITHUB_ENV
-          echo "DEB_NAME=ripgrep_$version-1_amd64.deb" >> $GITHUB_ENV
+          echo "DEB_NAME=PandaKnock_$version-1_amd64.deb" >> $GITHUB_ENV
 
       - name: Create sha256 sum of deb file
         shell: bash
