--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -209,6 +209,8 @@ jobs:
         shell: bash
         if: startsWith(matrix.os, 'windows')
         run: |
+          mkdir "$ARCHIVE"
+          cp "$BIN" "$ARCHIVE/"
           7z a "$ARCHIVE.zip" "$ARCHIVE"
           certutil -hashfile "$ARCHIVE.zip" SHA256 > "$ARCHIVE.zip.sha256"
           echo "ASSET=$ARCHIVE.zip" >> $GITHUB_ENV
@@ -218,6 +220,8 @@ jobs:
         shell: bash
         if: ${{ !startsWith(matrix.os, 'windows') }}
         run: |
+          mkdir "$ARCHIVE"
+          cp "$BIN" "$ARCHIVE/"
           tar czf "$ARCHIVE.tar.gz" "$ARCHIVE"
           shasum -a 256 "$ARCHIVE.tar.gz" > "$ARCHIVE.tar.gz.sha256"
           echo "ASSET=$ARCHIVE.tar.gz" >> $GITHUB_ENV
